# suckless-ogl

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COMPILING.md  Dockerfile  Makefile  README.md  compile_flags.txt  entrypoint.sh  index.html  requirements-dev.txt  run.sh
.github/workflows/: main.yml  test-and-build.yml
.zed/: debug.json  launch.json  settings.json  tasks.json
assets/: env.hdr
assets/materials/: pbr_materials.json
coverage/: index.html
coverage/coverage/home/runner/work/suckless-ogl/suckless-ogl/include/: app_settings.h.html  log.h.html  perf_timer.h.html
coverage/coverage/home/runner/work/suckless-ogl/suckless-ogl/src/: app.c.html  camera.c.html  fps.c.html  icosphere.c.html  instanced_rendering.c.html  log.c.html  material.c.html  pbr.c.html  perf_timer.c.html  shader.c.html  skybox.c.html  ssbo_rendering.c.html  texture.c.html  ui.c.html
coverage/home/runner/work/suckless-ogl/suckless-ogl/include/: app_settings.h.html  camera.h.html  gl_common.h.html  log.h.html  perf_timer.h.html  postprocess.h.html  utils.h.html
coverage/home/runner/work/suckless-ogl/suckless-ogl/src/: adaptive_sampler.c.html  app.c.html  async_loader.c.html  billboard_rendering.c.html  camera.c.html  fps.c.html  gl_debug.c.html  icosphere.c.html  instanced_rendering.c.html  log.c.html  material.c.html  pbr.c.html  perf_timer.c.html  postprocess.c.html  render_utils.c.html  shader.c.html  skybox.c.html  ssbo_rendering.c.html  texture.c.html  ui.c.html  window.c.html
coverage/home/runner/work/suckless-ogl/suckless-ogl/src/effects/: fx_auto_exposure.c.html  fx_auto_exposure.h.html  fx_bloom.c.html  fx_dof.c.html  fx_motion_blur.c.html
docs/: ASYNC_LOADER.md  IBL_ARCHITECTURE_IDEAS.md  PROFILING_GUIDE.md  PROGRESSIVE_IBL.md  RAII_CLEANUP_GUIDE.md  RENDERDOC_GUIDE.md  TEXTURE_OPTIMIZATION.md  antialiasing_screenspace.md  build.md  controle_camera_a_la_souris.md  docker.md  exposure_analysis_2026-01-24.md  nvidia_optimizations.md  opengl_cleanup_2026-01-28.md  photographic_standards.md  postprocess_ubo_2026-01-25.md  rendu_skybox.md  resolution_des_coutures_de_cubemap.md  stability_testing.md  structure_du_projet.md
hooks/: pre-commit  pre-push
include/: adaptive_sampler.h  app.h  app_settings.h  async_loader.h  billboard_rendering.h  camera.h  environment.h  fps.h  gl_common.h  gl_debug.h  icosphere.h  instanced_rendering.h  log.h  main.h  material.h  pbr.h  perf_timer.h  postprocess.h  postprocess_presets.h  render_utils.h  shader.h  skybox.h  ssbo_rendering.h  stb_image.h  texture.h  ui.h  utils.h  window.h
scripts/: setup_hooks.sh  setup_offline_deps.sh  trace_analyze.py
shaders/: background.frag  background.vert  bloom_downsample.frag  bloom_prefilter.frag  bloom_upsample.frag  common.glsl  debug_tex.frag  debug_tex.vert  equirect2cube.glsl  lum_adapt.comp  lum_downsample.frag  neighbor_max_velocity.comp  pbr_functions.glsl  pbr_ibl.frag  pbr_ibl.vert  pbr_ibl_billboard.frag  pbr_ibl_billboard.vert  pbr_ibl_instanced.frag  pbr_ibl_instanced.vert  pbr_ibl_rt.frag  pbr_ibl_rt.vert  pbr_ibl_ssbo.frag  pbr_ibl_ssbo.vert  phong.frag  phong.vert  postprocess.frag  postprocess.vert  tile_max_velocity.comp  ui.frag  ui.vert  ui_spinner.frag  ui_spinner.vert
shaders/IBL/: irmap.glsl  luminance_reduce_pass1.glsl  luminance_reduce_pass2.glsl  spbrdf.glsl  spmap.glsl
shaders/postprocess/: bloom.glsl  chromatic_aberration.glsl  color_grading.glsl  defines.glsl  dof.glsl  exposure.glsl  fxaa.glsl  grain.glsl  motion_blur.glsl  tonemap.glsl  ubo.glsl  vignette.glsl
src/: adaptive_sampler.c  app.c  async_loader.c  billboard_rendering.c  camera.c  environment.c  fps.c  gl_debug.c  icosphere.c  instanced_rendering.c  log.c  main.c  material.c  pbr.c  perf_timer.c  postprocess.c  render_utils.c  shader.c  skybox.c  ssbo_rendering.c  stb_image_impl.c  texture.c  ui.c  window.c
src/effects/: fx_auto_exposure.c  fx_auto_exposure.h  fx_bloom.c  fx_bloom.h  fx_dof.c  fx_dof.h  fx_motion_blur.c  fx_motion_blur.h
tests/: CMakeLists.txt  failed_diff_map.raw  failed_frame_actual.raw  ref_frame.raw  run_test_with_xvfb.sh  test_app.c  test_camera.c  test_fps.c  test_icosphere.c  test_instanced_rendering.c  test_log.c  test_main.c  test_material.c  test_pbr.c  test_perf_timer.c  test_postprocess.c  test_shader.c  test_shader_api.c  test_shader_include_manual.c  test_skybox.c  test_ssbo_rendering.c  test_stability.c  test_stb_image_impl.c  test_texture.c  test_trace_analyze.py  test_ui.c
tests/fixtures/includes/: invalid.glsl  loop.glsl  test_main.glsl
tests/fixtures/includes/depth_chain/: depth_0.glsl  depth_1.glsl  depth_10.glsl  depth_11.glsl  depth_12.glsl  depth_13.glsl  depth_14.glsl  depth_15.glsl  depth_16.glsl  depth_2.glsl  depth_3.glsl  depth_4.glsl  depth_5.glsl  depth_6.glsl  depth_7.glsl  depth_8.glsl  depth_9.glsl
tests/fixtures/includes/subdir/: helper.glsl
visual_tests/: index.html
